Sharded $lookup attempts to run shard pipeline on config server instead of shard-local config database

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • 165
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      With featureFlagShardedLookup enabled, the $lookups when reading from the config.localReshardingOplogBuffer.xx namespace end up targeting the config server rather than reading locally from the shard. This leads resharding's oplog application to miss finding the relevant oplog entry containing the pre/postImage document and causes findAndModify retryable writes to error after the resharding operation completes.

            Assignee:
            Hana Pearlman (Inactive)
            Reporter:
            Max Hirschhorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: