SERVER-58220: Do a local read when the collection stores local resharding oplog buffer